@@ -292,6 +292,12 @@ lua_rrd_graph (lua_State * L)
   return 3;
 }
 
+static int
+lua_rrd_flush(lua_State *L)
+{
+  return rrd_common_call(L, "flush", rrd_cmd_flush);
+}
+
 #if defined(DINF)
 static int
 lua_rrd_info (lua_State * L)
@@ -347,6 +353,7 @@ static const struct luaL_reg rrd[] = {
   {"restore", lua_rrd_restore},
   {"tune", lua_rrd_tune},
   {"update", lua_rrd_update},
+  {"flush", lua_rrd_flush},
 #if defined(DINF)
   {"info", lua_rrd_info},
   {"updatev", lua_rrd_updatev},
